[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osintagency"
version = "0.1.0"
description = "OSINT Agency - Telegram channel monitoring and analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "telethon>=1.36,<2.0",
    "peewee>=3.17,<4.0",
    "click>=8.1,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
]

[project.scripts]
osintagency = "osintagency.cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["osintagency*"]
